# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/engine/: command.py
brain_games/games/: calc.py  calc_code.py  even.py  even_code.py  gcd.py  gcd_code.py  prime.py  prime_code.py  progression.py  progression_code.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
